# online_martapi_project

./: compose.yaml  readme.md
inventory-service/: .env  Dockerfile.dev  pyproject.toml
inventory-service/app/: inventory.proto  inventory_producer.py  main.py  settings.py  stock_update.py
inventory-service/app/authentication/: auth.py
inventory-service/app/consumer/: add_inventory_consumer.py  check_stock_consumer.py  update_stock_consumer.py
inventory-service/app/crud/: inventory_crud.py
inventory-service/app/models/: inventory_model.py
notification-service/: .env  Dockerfile.dev  pyproject.toml
notification-service/app/: main.py  notification.proto  notification_consumer.py  notification_db.py  notification_email.py  notification_producer.py  settings.py
notification-service/app/authentication/: auth.py
notification-service/app/crud/: notification_crud.py
notification-service/app/models/: notification_model.py
order-service/: .env  Dockerfile.dev  pyproject.toml
order-service/app/: main.py  order.proto  order_db.py  order_producer.py  payment_processing.py  settings.py
order-service/app/authentication/: auth.py
order-service/app/consumer/: check_consumer.py  update_consumer.py
order-service/app/crud/: order_crud.py
order-service/app/models/: order_model.py  schema.py
payment-service/: .env  Dockerfile.dev  pyproject.toml
payment-service/app/: deps.py  main.py  payment.proto  settings.py
payment-service/app/authentication/: auth.py
payment-service/app/crud/: payment_crud.py
payment-service/app/models/: payment_model.py
product-service/: .env  Dockerfile.dev  pyproject.toml
product-service/app/: main.py  product.proto  product_consumer.py  product_producer.py  settings.py
product-service/app/authentication/: auth.py
product-service/app/crud/: product_crud.py
product-service/app/models/: product_model.py
user-service/: .env  Dockerfile.dev  pyproject.toml
user-service/app/: deps.py  main.py  settings.py  user.proto
user-service/app/authentication/: admin.py  auth.py
user-service/app/crud/: user_crud.py
user-service/app/models/: user_model.py
user-service/tests/: test_main.py
