[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Raja Anas Turk <rajaanasturk157@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
aiokafka = "^0.10.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
uvicorn = "^0.30.6"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
