[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "user service for online mart"
authors = ["Raja Anas Turk <rajaanasturk157@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiokafka = "^0.10.0"
sqlmodel = "^0.0.18"
types-python-jose = "^3.3.4.20240106"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
types-passlib = "^1.7.7.20240327"
psycopg = {extras = ["binary"], version = "^3.1.19"}
bcrypt = "^4.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
mailjet-rest = "^1.3.4"
stripe = "^10.10.0"
httpx = "^0.27.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
